# control_node

./: CMakeLists.txt  README.md  package.xml
cfg/: inspection.yaml  manualWaypoints.yaml  training.yaml
launch/: circle.launch  control.launch  manualWaypoints.launch  training.launch
parameters/: MPC.params
scripts/: waypointGen.py
src/: control.cpp  training.cpp  waypoint.cpp
waypoints/: genPoints.wp  position.wp  position2.csv  start.wp  start2.wp  test.wp  topInspection.wp  train.wp  training.wp
